# test-2

./: GITHUB_BUILD_NOTES.md  IOS_60PCT_STRATEGY.md
.github/workflows/: build-ios-runtime-jvm.yml  build-ios-runtime-tipa.yml  build-ios-tipa.yml
app/src/main/cpp/: CMakeLists.txt  emulation.c  logger.h  zomdroid.c
app/src/main/cpp/box64/: CMakeLists.txt
app/src/main/cpp/box64/src/: custommem.c  custommmap.c  mallochook.c
app/src/main/cpp/box64/src/dynarec/arm64/: arm64_next.S  arm64_printer.h  dynarec_arm64_arch.c
app/src/main/cpp/box64/src/emu/: x64run0f.c  x64run660f.c  x64runavx660f.c
app/src/main/cpp/box64/src/include/: dlfcn.h  elf.h  link.h  malloc.h  myalign.h  pthread.h  regs.h  stdio.h  time.h
app/src/main/cpp/box64/src/include/bits/: timespec.h
app/src/main/cpp/box64/src/include/sys/: attr.h  eventfd.h  mman.h  personality.h  ptrace.h  signalfd.h  stat.h  syscall.h  ucred.h  vfs.h
app/src/main/cpp/box64/src/libtools/: signals.c  threads.c  threads32.c
app/src/main/cpp/box64/src/wrapped/: wrappedlibc.c  wrappedlibm.c  wrappedsdl1.c
app/src/main/cpp/box64/src/wrapped32/: wrappedlibc.c
ios/bootstrap/: Info.plist  main.m
ios/scripts/: build_runtime_probe.sh  build_tipa.sh  prepare_ios_runtime_import.sh
